--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">JavaScript编程入门</h3>
+          <h3 class="panel-title">项目名</h3>
         </div>
         <div class="panel-body">
           <li class="list-group-item">
-            <a href="https://xugy0926.github.io/getting-started-with-javascript/">
-              新生大学JS编程入门项目[getting-started-with-javascript]
+            <a href="https://www.coursera.org/">
+              online courses from top university
             </a>
           </li>
           <li class="list-group-item">
-            <a href="https://github.com/xugy0926/words-from-the-heart">
-              新生大学JS编程入门心里话[getting-started-with-javascript]
+            <a href="http://d.stulip.org/">
+              郁金香导航
             </a>
           </li>
         </div>
