--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>个人导航</title>
+    <title>Augustus'Zone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./public/style.css">
@@ -12,14 +12,14 @@
 <div>
   <div class="main-header">
     <div class="container">
-      <h1>快捷通道</h1>
+      <h1>温刘欣</h1>
     </div>
   </div>
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">项目名</h3>
+          <h3 class="panel-title">项目</h3>
         </div>
         <div class="panel-body">
           <li class="list-group-item">
